wp-content/themes/gracey-holistic/style.css
/* ... */
@media only screen and (max-width: 840px) {

  .schedule-box {
    padding: 12px;
  }

  .schedule-box h3 {
    font-size: 24px;
    font-size: 2.4rem;
  }
}

@media only screen and (max-width: 768px) {

  .page.page-template-page_blog .content .entry {
      margin-bottom: 20px;
  }

  .single .content .entry {
    margin-right: 0;
  }

  .entry-title {
    font-size: 39px;
    font-size: 3.9rem;
  }

  .content, /*move to 768*/
  .content-sidebar .content,
  .sidebar-content .content {
    float: none;
    padding: 0; }

  .content-sidebar .content {
    border-left: none;
    border-right: none;
    width: 100%; }

  .sidebar-primary {
    width: 100%;
    margin-top: 0;
  }

  .fl-module-rich-text h2 {
    font-size: 26px;
    font-size: 2.6rem;
  }

  .fl-col-group.fl-node-58c5bd5dabcd5.fl-col-group-custom-width { /* front-page section 3 nav-images */
      max-width: 400px;
      margin: 30px auto 0;
  }

  .full-width-content .content {
    padding: 40px 10px 0;
  }

  .full-width-content .fl-rich-text .content {
    padding: 0;
  }

  .home.full-width-content .content {
    padding: 0;
  }

/*.full-width-content .content {
    padding: 40px 10px 0;
}
*/

  .page-id-34 .bb-sidebar-container { /* bio page below logos */
    margin-top: 40px;
  }

  .wp-caption.alignleft { /* figure */
    /*margin-left: 10px;*/
  }

  figcaption.wp-caption-text {
    margin-bottom: 0;
  }

  .ghh .fl-builder-content .fl-subscribe-form.fl-subscribe-form-inline .fl-form-field input {
    height: 38px;
  }

  #text-4 { /* sidebar blog subscribe */
    display: none;
  }

  .active-camp-subscribe-landing {
    width: 100%;
    float: none;
    margin-left: 0;
    margin-top: -30px;
  }

  .services-group {
    max-width: 400px;
  }

  blockquote {
    font-size: 22px;
    font-size: 2.2rem;
  }

  blockquote:before, blockquote:after {
    background-size: 41px;
    height: 38px;
    line-height: 38px;
    width: 44px;
  }

  blockquote:after {
    background-position: 1px -41px;
    bottom: 72px;
  }

  blockquote p {
    padding: 0 52px;
  }

}

@media only screen and (max-width: 600px) {
  .after-entry .enews-widget,
  .landing-page .enews-widget,
  .lead-capture-page .enews-widget {
    padding: 20px;
    width: 100%; }
  .five-sixths,
  .four-sixths,
  .one-fourth,
  .one-half,
  .one-sixth,
  .one-third,
  .three-fourths,
  .three-sixths,
  .two-fourths,
  .two-sixths,
  .two-thirds {
    margin: 0;
    width: 100%; }
  .footer-widgets .wrap,
  .site-footer .wrap {
    padding-left: 5%;
    padding-right: 5%; }
  .offscreen-content .enews-widget {
    padding: 20px; }
  .offscreen-content p {
    line-height: 1.5; } }

::-webkit-input-placeholder {
  color: #444; }

:-moz-placeholder {
  /* Firefox 18- */
  color: #444; }

::-moz-placeholder {
  /* Firefox 19+ */
  color: #444; }

:-ms-input-placeholder {
  color: #444; }

@media only screen and (max-width: 500px) {

  .wp-caption.alignleft { /* figure */
    display: block;
    float: none;
    /*margin-bottom: -32px;*/
  }

}

